--- a/cantici.html
+++ b/cantici.html
@@ -358,7 +358,8 @@
 
             // SOLUZIONE MOBILE: Usa Google Docs Viewer
             // Funziona su tutti i dispositivi e mostra il PDF nella pagina
-            const viewerUrl = `https://docs.google.com/viewer?url=${encodeURIComponent(pdfPath)}&embedded=true`;
+            const viewerUrl = `https://mozilla.github.io/pdf.js/web/viewer.html?file=${encodeURIComponent(pdfPath)}`;
+
 
             document.getElementById('pdfFrame').src = viewerUrl;
             document.getElementById('pdfViewer').classList.add('show');
