--- a/cantici.html
+++ b/cantici.html
@@ -145,6 +145,7 @@
                 <li><a href="eventi.html">Eventi</a></li>
                 <li><a href="cantici.html">Cantici</a></li>
                 <li><a href="#contatti" class="mobile-only">Contatti</a></li>
+                <li><a href="admin-musicisti-php.html">Admin Musicisti</a></li>
             </ul>
 
             <div class="header__quick">
